--- a/README
+++ b/README
@@ -13,6 +13,10 @@ DESCRIPTION
 
     THIS IS A DEVELOPMENT RELEASE. API MAY CHANGE WITHOUT NOTICE.
 
+STRATEGY
+    use catdir($c->base_dir, 'share') if not installed to system
+    use dist_dir($dist_naem) if installed to system
+
 AUTHOR
     Tokuhiro Matsuno <tokuhirom AAJKLFJEF@ GMAIL COM>
 
